--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="thirdpro.css">
+    <link rel="stylesheet" href="./thirdpro.css">
 </head>
 <body>
     <main>
@@ -35,7 +35,7 @@
 
 
 </main>
-    <script src="first.js"></script>
+    <script src="./first.js"></script>
 </body>
 
 </html>
